--- a/admin/component/MovieForm/template.html
+++ b/admin/component/MovieForm/template.html
@@ -4,7 +4,9 @@
       <input required type="text" name="titre" placeholder="Saisir une titre de film" >
       <input required type="text" name="realisateur" placeholder="Saisir un nom de réalisateur">
       <input required type="text" name="annee" placeholder="Saisir une année de sortie">
+      <input type="number" id="annee" name="annee" min="1800" max="2025" placeholder="année de sortie"/>
       <input required type="text" name="duree" placeholder="Saisir une durée en minutes">
+      <input type="number" id="duree" name="duree" min="0" max="1000" placeholder="durée en minutes"/>
       <input required type="text" name="description" placeholder="Saisir une description">
       <input required type="text" name="categories" placeholder="Saisir une catégirie">
       <input required type="text" name="image" placeholder="Saisir le nom du fichier de l'image du flim">
