--- a/admin/component/MovieForm/style.css
+++ b/admin/component/MovieForm/style.css
@@ -1,1 +1,57 @@
+.addMovie {
+    max-width: 600px;
+    background-color: var(--color-black);
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
 
+.addMovie__title {
+    text-align: center;
+    color: #333;
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.addMovie__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    padding: 2rem;
+    width: 100%;
+}
+
+.addMovie__option {
+    padding: 1rem;
+    width: 100%;
+    max-width: 30rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 1rem;
+    transition: border 0.3s ease-in-out;
+}
+
+.addMovie__option:hover{
+    border:2px #007bff;
+    outline: none;
+}
+
+.addMovie__button {
+    width: 100%;
+    max-width: 30rem;
+    background-color: #007bff;
+    color: white;
+    padding: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1.1rem;
+    transition: background 0.3s;
+}
+
+.addMovie__button:hover {
+    background-color: #0056b3;
+}
