--- a/admin/component/MovieForm/style.css
+++ b/admin/component/MovieForm/style.css
@@ -1,14 +1,20 @@
+body{
+    background-color: var(--color-black);
+    align-items: center;
+}
+
 .addMovie {
     max-width: 600px;
-    background-color: var(--color-black);
+    background-color: hsl(254, 28%, 16%);
     padding: 2rem;
     border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 6px 10px rgba(254, 254, 254, 0.1);
+    font-family: var(--ff-sans);
 }
 
 .addMovie__title {
     text-align: center;
-    color: #333;
+    color:var(--color-white);
     margin-bottom: 1.5rem;
     font-size: 1.5rem;
     font-weight: bold;
@@ -34,11 +40,6 @@
     transition: border 0.3s ease-in-out;
 }
 
-.addMovie__option:hover{
-    border:2px #007bff;
-    outline: none;
-}
-
 .addMovie__button {
     width: 100%;
     max-width: 30rem;
@@ -49,7 +50,7 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 1.1rem;
-    transition: background 0.3s;
+    
 }
 
 .addMovie__button:hover {
