--- a/app/component/Movie/template.html
+++ b/app/component/Movie/template.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" onclick="C.handlerDetail({{id}})">
   <img
     src="https://mmi.unilim.fr/~pradeau49/SAE2.03-starter-project/server/images/{{image}}"
     alt="Affiche du film"
