--- a/app/component/MovieCategory/style.css
+++ b/app/component/MovieCategory/style.css
@@ -1,24 +1,49 @@
-.card__details{
-  background-color: var(--color-bg);
-  display: flex;
-  flex-direction: column;
-}
-.card__details__top{
+/* Container de la catégorie */
+.categorie {
   display: flex;
   flex-direction: row;
-  padding: 2rem;
-}
-.card__details__image{
-  width: 50%;
-  height: 100%;
-  border-radius: 0.5rem;
-}
-.card__details__content{
+  align-items: center;
+  justify-content: center;
   font-family: var(--ff-sans);
-  padding-left: 2rem;
-  color: var(--color-fg);
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
 }
-.card__details__trailer{
-  width: auto;
-  height: 20rem;
+
+/* Liste des catégories */
+.categorie__list {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  flex-wrap: wrap; /* Permet de gérer les éléments en ligne */
+  justify-content: center;
+}
+
+/* Chaque élément de la catégorie */
+.categorie__tag {
+  background-color: rgb(51, 51, 51); /* Couleur douce mais moderne (violet) */
+  color: white; /* Texte blanc pour le contraste */
+  border: 1px solid var(--color-gray); /* Bordure blanche pour le contraste */
+  padding: 10px 20px;
+  border-radius: 30px; /* Bords arrondis pour un effet plus doux */
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out; /* Transition douce pour les effets */
+}
+
+/* Style au survol */
+.categorie__tag:hover {
+  background-color: var(--color-white);
+  color: var(--color-gray-dark); 
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2); /* Ombre plus marquée au survol */
+}
+/* Ajouter un peu de responsivité pour des écrans plus petits */
+@media (max-width: 600px) {
+  .categorie__list {
+      flex-direction: column;
+      align-items: center;
+  }
+  .categorie__tag {
+      margin-bottom: 1rem;
+  }
 }
