--- a/app/component/MovieCategory/template.html
+++ b/app/component/MovieCategory/template.html
@@ -1,5 +1,4 @@
 <div class="categorie">
-  <ul class="categorie__list">
-    {{categories}}
+  <ul class="categorie__list">{{categories}}</ul>
   </ul>
 </div>
