--- a/admin/component/MovieForm/style.css
+++ b/admin/component/MovieForm/style.css
@@ -1,15 +1,11 @@
-body{
-    background-color: var(--color-black);
-    align-items: center;
-}
-
 .addMovie {
     max-width: 600px;
-    background-color: hsl(254, 28%, 16%);
+    background-color: var(--color-bg);
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0px 6px 10px rgba(254, 254, 254, 0.1);
     font-family: var(--ff-sans);
+    margin: 3rem;
 }
 
 .addMovie__title {
@@ -43,8 +39,8 @@ body{
 .addMovie__button {
     width: 100%;
     max-width: 30rem;
-    background-color: #007bff;
-    color: white;
+    background-color: var(--color-gray-light);
+    color: var(--color-bg);
     padding: 1rem;
     border: none;
     border-radius: 8px;
@@ -54,5 +50,6 @@ body{
 }
 
 .addMovie__button:hover {
-    background-color: #0056b3;
+    background-color: var(--color-gray);
+    color: var(--color-white);
 }
