--- a/admin/component/ProfileForm/style.css
+++ b/admin/component/ProfileForm/style.css
@@ -1,18 +1,14 @@
-body{
-    background-color: var(--color-black);
-    align-items: center;
-}
-
-.addMovie {
+.addProfile {
     max-width: 600px;
-    background-color: hsl(254, 28%, 16%);
+    background-color: var(--color-bg);
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0px 6px 10px rgba(254, 254, 254, 0.1);
     font-family: var(--ff-sans);
+    margin: 3rem;
 }
 
-.addMovie__title {
+.addProfile__title {
     text-align: center;
     color:var(--color-white);
     margin-bottom: 1.5rem;
@@ -20,7 +16,7 @@ body{
     font-weight: bold;
 }
 
-.addMovie__form {
+.addProfile__form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,7 +26,7 @@ body{
     width: 100%;
 }
 
-.addMovie__option {
+.addProfile__option {
     padding: 1rem;
     width: 100%;
     max-width: 30rem;
@@ -40,11 +36,11 @@ body{
     transition: border 0.3s ease-in-out;
 }
 
-.addMovie__button {
+.addProfile__button {
     width: 100%;
     max-width: 30rem;
-    background-color: #007bff;
-    color: white;
+    background-color: var(--color-gray-light);
+    color: var(--color-bg);
     padding: 1rem;
     border: none;
     border-radius: 8px;
@@ -53,6 +49,7 @@ body{
     
 }
 
-.addMovie__button:hover {
-    background-color: #0056b3;
+.addProfile__button:hover {
+    background-color: var(--color-gray);
+    color: var(--color-white);
 }
