--- a/app/component/NavBar/template.html
+++ b/app/component/NavBar/template.html
@@ -2,4 +2,20 @@
   <ul class="navbar__list">
     <li class="navbar__item" onclick="{{hAbout}}">Accueil</li>
   </ul>
+
+  <div class="navbar__profile">
+    <div class="navbar__profile">
+      <label for="profile-select" class="navbar__label">Profil :</label>
+      <select id="profile-select" class="navbar__select" onchange="{{handler}}">
+        {{profile}}
+      </select>
+  
+      <img
+        id="profile-image"
+        class="navbar__image"
+        src="https://mmi.unilim.fr/~lpradeau49/SAE2.03-starter-project/server/images/{{image}}"
+        alt="Photo de profil"
+      />
+  </div>
+
 </nav>
