--- a/app/component/NavBar/template.html
+++ b/app/component/NavBar/template.html
@@ -13,7 +13,7 @@
       <img
         id="profile-image"
         class="navbar__image"
-        src="https://mmi.unilim.fr/~lpradeau49/SAE2.03-starter-project/server/images/{{image}}"
+        src="https://mmi.unilim.fr/~pradeau49/SAE2.03-starter-project/server/images/{{image}}"
         alt="Photo de profil"
       />
   </div>
