--- a/app/component/NavBar/template.html
+++ b/app/component/NavBar/template.html
@@ -5,7 +5,7 @@
 
   <div class="navbar__profile">
     <div class="navbar__profile">
-      <label for="profile-select" class="navbar__label">Profil :</label>
+      <label for="profile-select" class="navbar__label"></label>
       <select id="profile-select" class="navbar__select" onchange="{{handler}}">
         {{profile}}
       </select>
