--- a/app/css/reset.css
+++ b/app/css/reset.css
@@ -3,14 +3,17 @@
 *::before {
   box-sizing: border-box;
 }
-body{
+
+body {
   background-color: var(--color-bg);
   color: var(--color-fg);
   font-family: var(--ff-sans);
+  margin: 0;
+  padding: 0;
 }
+
 ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-
