ite 2 qui re marche

--- a/admin/component/MovieForm/template.html
+++ b/admin/component/MovieForm/template.html
@@ -9,7 +9,7 @@
       placeholder="durée en minutes" />
     <input class="addMovie__option" required type="text" name="description" placeholder="Saisir une description">
 
-    <select class="addMovie__option" name="categories" placeholder="Saisir une catégorie">
+    <select class="addMovie__option" name="categorie" placeholder="Saisir une catégorie">
       <option value="1">Action</option>
       <option value="2">comedie</option>
       <option value="3">drame</option>
