--- a/app/component/Movie/template.html
+++ b/app/component/Movie/template.html
@@ -3,21 +3,21 @@
     src="https://mmi.unilim.fr/~pradeau49/SAE2.03-starter-project/server/images/{{image}}"
     alt="Affiche du film"
     class="card__image"
-    />
-    <button class="card__fav-btn {{favoriClass}}" onclick="event.stopPropagation(); C.handlerAddFavoris({{id}}, this)">
-      <!-- <svg class="card__fav-btn-icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
-        <path
-          d="M14.0001 25.9531C20.5276 25.9531 25.9531 20.5391 25.9531 14.0001C25.9531 7.47262 20.5156 2.04712 13.9881 2.04712C7.44961 2.04712 2.04761 7.47262 2.04761 14.0001C2.04761 20.5391 7.46111 25.9531 14.0001 25.9531ZM11.1296 8.77312C12.4066 8.77312 13.4031 9.50012 14.0006 10.5901C14.5866 9.50012 15.6056 8.77362 16.8601 8.77362C18.8871 8.77362 20.3401 10.2971 20.3401 12.4061C20.3401 15.5471 17.0241 18.4296 14.5866 19.9886C14.3991 20.1056 14.1766 20.2696 14.0241 20.2696C13.8716 20.2696 13.6141 20.1056 13.4146 19.9886C10.9771 18.4296 7.64911 15.5471 7.64911 12.4066C7.64911 10.2966 9.11411 8.77362 11.1291 8.77362"
-           fill="white" />
-      </svg> -->
-     
-        <svg viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
-          <path d="M14.0001 25.9531C20.5276 25.9531 25.9531 20.5391 25.9531 14.0001C25.9531 7.47262 20.5156 2.04712 13.9881 2.04712C7.44961 2.04712 2.04761 7.47262 2.04761 14.0001C2.04761 20.5391 7.46111 25.9531 14.0001 25.9531ZM11.1296 8.77312C12.4066 8.77312 13.4031 9.50012 14.0006 10.5901C14.5866 9.50012 15.6056 8.77362 16.8601 8.77362C18.8871 8.77362 20.3401 10.2971 20.3401 12.4061C20.3401 15.5471 17.0241 18.4296 14.5866 19.9886C14.3991 20.1056 14.1766 20.2696 14.0241 20.2696C13.8716 20.2696 13.6141 20.1056 13.4146 19.9886C10.9771 18.4296 7.64911 15.5471 7.64911 12.4066C7.64911 10.2966 9.11411 8.77362 11.1291 8.77362"/>
-        </svg>
-     
-      
+  />
+
+  <div class="card__buttons">
+    <button class="card__button card__button--fav {{favoriClass}}" onclick="event.stopPropagation(); C.handlerAddFavoris({{id}}, this)">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+        <path d="M12 8C12 8 12 8 11.24 7C10.36 5.84 9.06 5 7.5 5C5.01 5 3 7.01 3 9.5C3 10.43 3.28 11.29 3.76 12C4.57 13.21 12 21 12 21M12 8C12 8 12 8 12.76 7C13.64 5.84 14.94 5 16.5 5C18.99 5 21 7.01 21 9.5C21 10.43 20.72 11.29 20.24 12C19.43 13.21 12 21 12 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
     </button>
+
+    <button class="card__button card__button--delete {{deleteClass}}" onclick="event.stopPropagation(); C.handlerDeleteFavoris({{id}}, this)">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+        <path d="M12 13.4L7.1 18.3C6.92 18.48 6.68 18.58 6.4 18.58C6.12 18.58 5.88 18.48 5.7 18.3C5.52 18.12 5.43 17.88 5.43 17.6C5.43 17.32 5.52 17.08 5.7 16.9L10.6 12L5.7 7.1C5.52 6.92 5.43 6.68 5.43 6.4C5.43 6.12 5.52 5.88 5.7 5.7C5.88 5.52 6.12 5.43 6.4 5.43C6.68 5.43 6.92 5.52 7.1 5.7L12 10.6L16.9 5.7C17.08 5.52 17.32 5.43 17.6 5.43C17.88 5.43 18.12 5.52 18.3 5.7C18.48 5.88 18.58 6.12 18.58 6.4C18.58 6.68 18.48 6.92 18.3 7.1L13.4 12L18.3 16.9C18.48 17.08 18.58 17.32 18.58 17.6C18.58 17.88 18.48 18.12 18.3 18.3C18.12 18.48 17.88 18.58 17.6 18.58C17.32 18.58 17.08 18.48 16.9 18.3L12 13.4Z" fill="white"/>
+      </svg>
+    </button>
+  </div>
+
   <h2 class="card__title">{{titre}}</h2>
-
 </div>
-
