--- a/app/component/Movie/style.css
+++ b/app/component/Movie/style.css
@@ -12,7 +12,6 @@
   max-width: 15rem;
   border-radius: 0.5rem;
   overflow: hidden;
-
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -25,9 +24,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* L'image couvre toute la zone sans déformation */
   border-radius: 0.5rem;
-  /* Coins arrondis */
 }
 
 .card__title {
@@ -35,89 +32,83 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  /* Le titre prend toute la largeur de la carte */
   font-size: 1rem;
-  /* Taille de police du titre */
   font-weight: 600;
   color: white;
   text-shadow: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.6);
-  /* Ombre légère */
   padding: 2rem 1rem 0 1rem;
   margin: 0;
   background: linear-gradient(to top, rgb(0, 0, 0), rgba(44, 44, 44, 0));
   box-sizing: border-box;
   height: 30%;
-  /* Le fond noir occupe un tiers de la hauteur de l'image */
   display: flex;
-  align-items: flex-top;
-  /* Le texte est aligné en bas du fond noir */
+  align-items: flex-start;
 }
 
-.card__title-text {
-  z-index: 1;
-  /* Placer le texte au-dessus du fond */
-}
-
-
-
-/* Ajout du style pour le bouton favori avec BEM
-.card__fav-btn {
+.card__buttons {
   position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-  background: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.card__button {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 50%;
   border: none;
   cursor: pointer;
-  transition: transform 0.2s ease;
-}
-
-.card__favsvg {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.7);
-
-} */
-
-/* .card__fav-btn-icon {
-  width: 1.5rem;
-  height: 1.5rem;
-  fill: none;
-
-  /* Cœur par défaut en gris 
-  transition: stroke 0.2s ease, transform 0.2s ease;
-} */
-
-/* État quand le film est ajouté aux favoris */
-.card__fav-btn--liked .card__fav-btn-icon {
-  stroke: red;
-  /* Cœur rouge quand favori */
-  transform: scale(1.2);
-  /* Agrandissement du cœur lorsqu'il est aimé */
-}
-
-svg {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-  background: none;
-  border: none;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-  /* box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.7); */
+  pointer-events: auto;
   width: 2rem;
   height: 2rem;
+  transition: transform 0.2s ease;
+}
+
+.card__button svg {
+  width: 100%;
+  height: 100%;
   transition: stroke 0.2s ease, transform 0.2s ease;
 }
 
-/* Styles pour les écrans plus larges (tablettes et desktops) */
+.card__button:hover {
+  transform: scale(1.2);
+}
+
+.card__button--fav {
+  top: 0.5rem;
+  right: 0.5rem;
+}
+
+.card__button--delete {
+  top: 0.5rem;
+  left: 0.5rem;
+}
+
+.card__button--delete.hidden-delete {
+  display: none;
+}
+
+.card__button--delete.show-delete {
+  display: inline-block;
+
+}
+
+
+svg.heart-liked path {
+  stroke: red;
+  fill: red;
+}
+
 @media (min-width: 48rem) {
   .cards {
     grid-template-columns: repeat(4, 1fr);
-    /* 4 colonnes pour les tablettes */
   }
 }
 
 @media (min-width: 64rem) {
   .cards {
     grid-template-columns: repeat(6, 1fr);
-    /* 6 colonnes pour les écrans de bureau */
   }
 }
