--- a/app/css/base.css
+++ b/app/css/base.css
@@ -8,3 +8,5 @@
 @import "../component/Movie/style.css" layer(components);
 @import "../component/MovieDetail/style.css" layer(components);
 @import "../component/MovieCategory/style.css" layer(components);
+@import "../component/MovieMiseenavant/style.css" layer(components);
+@import "../component/BarDeRecherche/style.css" layer(components);
