--- a/app/component/NavBar/style.css
+++ b/app/component/NavBar/style.css
@@ -9,6 +9,11 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
+  .navbar__list {
+    display: flex;
+    gap: 2rem;
+  }
+
   .navbar__item {
     --_offset: 0.2rem;
     padding: 0.5rem 1rem;
