--- a/app/component/NavBar/template.html
+++ b/app/component/NavBar/template.html
@@ -3,7 +3,7 @@
     <li class="navbar__item" onclick="{{hAbout}}">Accueil</li>
     <li class="navbar__item" onclick="{{hFavoris}}">Favoris</li>
   </ul>
-
+  {{barrecherche}}
   <div class="navbar__profile">
     <div class="navbar__profile">
       <label for="profile-select" class="navbar__label"></label>
