--- a/app/component/MovieMiseenavant/style.css
+++ b/app/component/MovieMiseenavant/style.css
@@ -9,7 +9,6 @@
 .mea__titre {
   font-size: 2rem;
   font-weight: 700;
-
   margin: 0;
 }
 
@@ -20,8 +19,6 @@
   width: 100%;
   max-width: 60rem;
 }
-
-
 
 .mea__card {
   position: relative;
@@ -36,12 +33,10 @@
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
 }
 
-
-
 .mea__img {
   position: relative;
   width: 100%;
-  aspect-ratio: 2/3;
+  aspect-ratio: 2 / 3;
   overflow: hidden;
 }
 
@@ -52,44 +47,59 @@
   display: block;
 }
 
-
-
 .mea__overlay {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   padding: 1rem;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+
   color: #fff;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: auto;
 }
 
+.mea__card:hover .mea__overlay {
+  background: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+}
+
+
 .mea__name {
-  font-size: 2rem;
+  opacity: 0;
+  font-size: 1.5rem;
   font-weight: 600;
-  margin: 0 0 0.5rem;
+  margin: 0 0 0.25rem;
+  line-height: 1.2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: opacity 0.3s ease;
+}
+
+.mea__card:hover .mea__name {
+  opacity: 1;
+  /* Afficher le nom au survol */
 }
 
 .mea__desc {
   opacity: 0;
   transition: opacity 0.3s ease;
+  font-size: 0.9rem;
+  margin: 0.5rem 0;
+  height: auto;
+  /* Permet à la description de s'ajuster */
+  overflow: hidden;
 }
 
 .mea__card:hover .mea__desc {
   opacity: 1;
-  font-size: 0.9rem;
-  margin: 0;
+  /* Afficher la description au survol */
 }
 
 
-
-
-@media (min-width: 30rem) {
-  .mea__cards {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
 
 @media (min-width: 48rem) {
   .mea__cards {
