nav ite surprise

--- a/SAE2.03-iteration-max/app/component/MovieDetail/template.html
+++ b/SAE2.03-iteration-max/app/component/MovieDetail/template.html
@@ -1,7 +1,7 @@
 <div class="card__details">
   <div class="card__details__top">
-    <img src="https://mmi.unilim.fr/~pradeau49/SAE2.03-starter-project/server/images/{{image}}" alt="Affiche du film"
-      class="card__details__image" />
+    <img src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-max/server/images/{{image}}"
+      alt="Affiche du film" class="card__details__image" />
     <div class="card__details__content">
       <h2 class="card__details__title">{{titre}}</h2>
       <p class="card__details__desc">{{desc}}</p>
