--- a/SAE2.03-iteration-max/app/component/NavBar/template.html
+++ b/SAE2.03-iteration-max/app/component/NavBar/template.html
@@ -10,13 +10,10 @@
       <select id="profile-select" class="navbar__select" onchange="{{handler}}">
         {{profile}}
       </select>
-  
-      <img
-        id="profile-image"
-        class="navbar__image"
-        src="https://mmi.unilim.fr/~pradeau49/SAE2.03-starter-project/server/images/{{image}}"
-        alt="Photo de profil"
-      />
-  </div>
+
+      <img id="profile-image" class="navbar__image"
+        src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-max/server/images/{{image}}"
+        alt="Photo de profil" />
+    </div>
 
 </nav>
