--- a/SAE2.03-iteration-surprise/app/component/BarDeRecherche/template.html
+++ b/SAE2.03-iteration-surprise/app/component/BarDeRecherche/template.html
@@ -1,4 +1,16 @@
 <div class="BarDeRecherche">
   <input type="text" class="BarDeRecherche__input" placeholder="Rechercher un film..."
     onkeyup="C.handlerBarDeRecherche(this.value)" />
+  <svg class="BarDeRecherche__svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="ctg-header-input-icon"
+    width="24" height="24" viewBox="0 0 24 24">
+    <g fill="none" fill-rule="evenodd"><text fill="#6F6F6F" font-family="SourceSansPro-Regular, Source Sans Pro"
+        font-size="14" letter-spacing=".2" transform="translate(-32 -8)">
+
+      </text>
+      <path fill="#041E42" class="ctg-icon-fill"
+        d="M9.5 2a7.5 7.5 0 0 1 5.83 12.22c.4-.07.83.03 1.17.3l.11.1 4.43 4.3a1.5 1.5 0 0 1-1.97 2.26l-.11-.1-4.43-4.3a1.5 1.5 0 0 1-.44-1.35A7.5 7.5 0 1 1 9.5 2zm0 1.8a5.7 5.7 0 1 0 0 11.4 5.7 5.7 0 0 0 0-11.4z">
+      </path>
+    </g>
+  </svg>
+
 </div>
