--- a/SAE2.03-iteration-surprise/app/component/MovieMiseenavant/template.html
+++ b/SAE2.03-iteration-surprise/app/component/MovieMiseenavant/template.html
@@ -1,4 +1,5 @@
 <section class="mea">
-  <h2 class="mea__titre">Nouveautés</h2>
+  <h2 class="mea__titre">iBroadcasting recommande
+  </h2>
   <div class="mea__cards">{{card}}</div>
 </section>
