--- a/SAE2.03-iteration-surprise/app/component/BarDeRecherche/style.css
+++ b/SAE2.03-iteration-surprise/app/component/BarDeRecherche/style.css
@@ -1,31 +1,33 @@
 .BarDeRecherche {
   display: flex;
-  justify-content: center;
-  padding: 2rem;
-  background-color: var(--color-black);
+  justify-content: right;
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--color-bg);
+  border-left: 1px solid var(--color-gray-light);
 }
 
 .BarDeRecherche__input {
-  width: 40rem;
-  padding: 0.75rem 1rem;
-  font-size: 1rem;
-  color: var(--color-white);
-  border: 2px solid var(--color-gray);
-  background-color: var(--color-gray-dark);
-  border-radius: 2rem;
-  outline: none;
-  transition: all 0.3s ease;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  display: none;
 }
 
 
-.BarDeRecherche__input::placeholder {
-  color: var(--color-gray);
-  font-style: italic;
-}
+@media (min-width: 48rem) {
+  .BarDeRecherche__input {
+    display: flex;
+    width: 100%;
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
+    color: var(--color-black);
+    border: none;
 
-.BarDeRecherche__input:focus {
-  border-color: var(--color-gray);
-  box-shadow: 0 0 0 3px rgba(162, 162, 162, 0.2);
-  transform: scale(1.02);
+    outline: none;
+    transition: all 0.3s ease;
+
+  }
+
+
+  .BarDeRecherche__input::placeholder {
+    color: var(--color-gray-dark);
+  }
 }
