--- a/SAE2.03-iteration-surprise/app/component/MovieMiseenavant/style.css
+++ b/SAE2.03-iteration-surprise/app/component/MovieMiseenavant/style.css
@@ -10,31 +10,26 @@
   font-size: 2rem;
   font-weight: 700;
   margin: 0;
+  width: 100%;
+  max-width: 70rem;
+  text-align: left;
 }
 
 .mea__cards {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
   gap: 1rem;
   width: 100%;
-  max-width: 60rem;
+  max-width: 70rem;
 }
 
 .mea__card {
-  position: relative;
   border-radius: 0.5rem;
   overflow: hidden;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  cursor: pointer;
-}
-
-.mea__card:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
 }
 
 .mea__img {
-  position: relative;
   width: 100%;
   aspect-ratio: 2 / 3;
   overflow: hidden;
@@ -44,17 +39,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  display: block;
 }
 
 .mea__overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
   padding: 1rem;
-
-  color: #fff;
+  color: black;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -62,30 +52,16 @@
   height: auto;
 }
 
-.mea__card:hover .mea__overlay {
-  background: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
-}
-
 
 .mea__name {
-  opacity: 0;
   font-size: 1.5rem;
   font-weight: 600;
   margin: 0 0 0.25rem;
   line-height: 1.2;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  transition: opacity 0.3s ease;
-}
-
-.mea__card:hover .mea__name {
-  opacity: 1;
-  /* Afficher le nom au survol */
+  a
 }
 
 .mea__desc {
-  opacity: 0;
   transition: opacity 0.3s ease;
   font-size: 0.9rem;
   margin: 0.5rem 0;
@@ -94,10 +70,7 @@
   overflow: hidden;
 }
 
-.mea__card:hover .mea__desc {
-  opacity: 1;
-  /* Afficher la description au survol */
-}
+
 
 
 
