--- a/SAE2.03-iteration-surprise/app/component/MovieCategory/template.html
+++ b/SAE2.03-iteration-surprise/app/component/MovieCategory/template.html
@@ -2,7 +2,6 @@
   <input type="checkbox" id="menu-toggle" class="sr-only" />
   <label for="menu-toggle" class="categorie__label">
     <svg class="burger" viewBox="0 0 32 32" width="32" height="32">
-      <!-- Créer une ligne y=7 -->
 
       <line class="burger__line" x1="2" y1="7" x2="30" y2="7" stroke="currentColor" stroke-width="2"
         stroke-linecap="round" />
@@ -11,10 +10,8 @@
       <line class="burger__line" x1="2" y1="25" x2="30" y2="25" stroke="currentColor" stroke-width="2"
         stroke-linecap="round" />
 
-      <!-- Créer une ligne y=25 -->
     </svg>
-    <span class="catégorie__title">Catégories</span>
+    <span class="categorie__title">Catégories</span>
   </label>
   <ul class="categorie__list">{{categories}}</ul>
-  </ul>
 </div>
