--- a/SAE2.03-iteration-surprise/app/component/MovieDetail/style.css
+++ b/SAE2.03-iteration-surprise/app/component/MovieDetail/style.css
@@ -8,22 +8,152 @@
 .card__details__top {
   display: flex;
   flex-direction: row;
-  margin: 2rem 8rem
+  margin: 2rem 8rem;
+
 }
 
 .card__details__image {
-  width: 30rem;
-  max-height: 60%;
-  border-radius: 0.5rem;
+  width: 100%;
+  height: 35rem;
+  aspect-ratio: 16 / 9;
+  overflow: hidden;
+  position: relative;
+  border-radius: 0.2rem;
+  object-fit: cover;
+  display: block;
+
 }
 
 .card__details__content {
+  display: flex;
+  flex-direction: column;
   font-family: var(--ff-sans);
-  padding-left: 2rem;
-  color: var(--color-fg);
+  color: var(--color-bg);
+  width: 100%;
+  position: absolute;
+  bottom: 15.7rem;
+  left: 0;
+  padding: 1rem 5rem;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
+
+}
+
+.card__details__title {
+  padding-top: 10rem;
+  font-size: 4rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.card__details__desc {
+  font-size: 1.3rem;
+  width: 40%;
+
+}
+
+.card__details__realisateur {
+  margin-top: 0;
+}
+
+.card__details__list {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-top: 0rem;
+  list-style: disc;
+}
+
+.card__details__annee {
+  list-style: none;
+}
+
+.card__details__categorie {
+  display: inline-block;
+  border: solid var(--color-gray-light) 1px;
+  padding: 0.3rem 0.6rem;
+  border-radius: 0.3rem;
+  font-size: 0.8rem;
+  width: 8%;
+}
+
+.card__details__categorie:hover {
+  border: solid var(--color-bg) 1px;
+}
+
+.card__details__trailer__container {
+  background-color: var(--color-bg-blue);
+}
+
+.card__details__trailer__title {
+  margin: 2rem 3rem 1rem 3rem;
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--color-bg);
+}
+
+.card__details__trailer__desc {
+  margin: 2rem 3rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: var(--color-bg);
+  border-bottom: solid var(--color-bg) 3px;
 }
 
 .card__details__trailer {
-  width: 60%;
-  height: 20rem;
+  margin: 2rem 3rem 7rem 3rem;
+
+  width: 20%;
+  height: 30rem;
+}
+
+.card__details__buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.card__details__button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: white;
+  border-radius: 0.2rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  /* flou de fond pour effet "verre" */
+}
+
+.card__details__button svg {
+  stroke: white;
+  fill: none;
+}
+
+.card__details__button--reg {
+  background-color: var(--color-red);
+  border: none;
+}
+
+.icon-play {
+  border-radius: 8px;
+}
+
+.card__details__button--reg:hover {
+  background-color: var(--color-red-dark);
+}
+
+.card__details__button--fav {
+  background-color: rgba(0, 0, 0, 0.5);
+  border: solid 1px var(--color-gray);
+}
+
+.card__details__button--fav:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.card__details__button--fav.heart-liked svg path {
+  fill: red;
+  stroke: red;
 }
