--- a/SAE2.03-iteration-surprise/app/component/BarDeRecherche/style.css
+++ b/SAE2.03-iteration-surprise/app/component/BarDeRecherche/style.css
@@ -3,12 +3,13 @@
   justify-content: right;
   align-items: center;
   padding: 1rem;
-  background-color: var(--color-bg);
+  background-color: transparent;
   border-left: 1px solid var(--color-gray-light);
 }
 
 .BarDeRecherche__input {
   display: none;
+  background-color: transparent;
 }
 
 
@@ -18,7 +19,7 @@
     width: 100%;
     padding: 0.75rem 1rem;
     font-size: 1rem;
-    color: var(--color-black);
+    color: var(--color-bg);
     border: none;
 
     outline: none;
@@ -28,6 +29,6 @@
 
 
   .BarDeRecherche__input::placeholder {
-    color: var(--color-gray-dark);
+    color: var(--color-gray-light);
   }
 }
