--- a/SAE2.03-iteration-surprise/app/component/Movie/template.html
+++ b/SAE2.03-iteration-surprise/app/component/Movie/template.html
@@ -1,26 +1,32 @@
 <div class="card" onclick="C.handlerDetail({{id}})">
-  <img src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-surprise/server/images/{{image}}"
-    alt="Affiche du film" class="card__image" />
+  <a href="#detail">
 
-  <div class="card__buttons">
-    <button class="card__button card__button--fav {{favoriClass}}"
+    <img src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-surprise/server/images/{{image}}"
+      alt="Affiche du film" class="card__image" />
+
+    <div class="card__buttons">
+      <!-- <button class="card__button card__button--fav {{favoriClass}}"
       onclick="event.stopPropagation(); C.handlerAddFavoris({{id}}, this)">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path
           d="M12 8C12 8 12 8 11.24 7C10.36 5.84 9.06 5 7.5 5C5.01 5 3 7.01 3 9.5C3 10.43 3.28 11.29 3.76 12C4.57 13.21 12 21 12 21M12 8C12 8 12 8 12.76 7C13.64 5.84 14.94 5 16.5 5C18.99 5 21 7.01 21 9.5C21 10.43 20.72 11.29 20.24 12C19.43 13.21 12 21 12 21"
           stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
-    </button>
+    </button> -->
 
-    <button class="card__button card__button--delete {{deleteClass}}"
-      onclick="event.stopPropagation(); C.handlerDeleteFavoris({{id}}, this)">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-        <path
-          d="M12 13.4L7.1 18.3C6.92 18.48 6.68 18.58 6.4 18.58C6.12 18.58 5.88 18.48 5.7 18.3C5.52 18.12 5.43 17.88 5.43 17.6C5.43 17.32 5.52 17.08 5.7 16.9L10.6 12L5.7 7.1C5.52 6.92 5.43 6.68 5.43 6.4C5.43 6.12 5.52 5.88 5.7 5.7C5.88 5.52 6.12 5.43 6.4 5.43C6.68 5.43 6.92 5.52 7.1 5.7L12 10.6L16.9 5.7C17.08 5.52 17.32 5.43 17.6 5.43C17.88 5.43 18.12 5.52 18.3 5.7C18.48 5.88 18.58 6.12 18.58 6.4C18.58 6.68 18.48 6.92 18.3 7.1L13.4 12L18.3 16.9C18.48 17.08 18.58 17.32 18.58 17.6C18.58 17.88 18.48 18.12 18.3 18.3C18.12 18.48 17.88 18.58 17.6 18.58C17.32 18.58 17.08 18.48 16.9 18.3L12 13.4Z"
-          fill="white" />
-      </svg>
-    </button>
-  </div>
+      <button class="card__button card__button--delete {{deleteClass}}"
+        onclick="event.stopPropagation(); C.handlerDeleteFavoris({{id}}, this)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <path
+            d="M12 13.4L7.1 18.3C6.92 18.48 6.68 18.58 6.4 18.58C6.12 18.58 5.88 18.48 5.7 18.3C5.52 18.12 5.43 17.88 5.43 17.6C5.43 17.32 5.52 17.08 5.7 16.9L10.6 12L5.7 7.1C5.52 6.92 5.43 6.68 5.43 6.4C5.43 6.12 5.52 5.88 5.7 5.7C5.88 5.52 6.12 5.43 6.4 5.43C6.68 5.43 6.92 5.52 7.1 5.7L12 10.6L16.9 5.7C17.08 5.52 17.32 5.43 17.6 5.43C17.88 5.43 18.12 5.52 18.3 5.7C18.48 5.88 18.58 6.12 18.58 6.4C18.58 6.68 18.48 6.92 18.3 7.1L13.4 12L18.3 16.9C18.48 17.08 18.58 17.32 18.58 17.6C18.58 17.88 18.48 18.12 18.3 18.3C18.12 18.48 17.88 18.58 17.6 18.58C17.32 18.58 17.08 18.48 16.9 18.3L12 13.4Z"
+            fill="white" />
+        </svg>
+      </button>
+    </div>
+    <div class="card__content">
 
-  <h2 class="card__title">{{titre}}</h2>
+      <h3 class="card__name">{{titre}}</h3>
+      <p class="card__cat">{{category}}</p>
+    </div>
+  </a>
 </div>
