--- a/SAE2.03-iteration-surprise/app/component/NavBar/style.css
+++ b/SAE2.03-iteration-surprise/app/component/NavBar/style.css
@@ -1,11 +1,11 @@
 .navbar {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), transparent);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  color: var(--color-fg);
-  background-color: var(--color-bg);
+  color: var(--color-bg);
   font-family: var(--ff-sans);
   border: var(--color-gray-light) 1px solid;
 
@@ -25,12 +25,12 @@
     cursor: pointer;
     transition: text-underline-offset 0.2s ease-in-out;
     font-size: 1.1rem;
-    color: var(--color-fg);
+    color: var(--color-bg);
   }
 
   .navbar__item:hover {
     --_offset: 0.5rem;
-    color: var(--color-accent, #585858);
+
   }
 }
 
@@ -68,10 +68,19 @@
 }
 
 @media (min-width: 48rem) {
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+
+
   .navbar__label {
     display: flex;
     margin-right: 0.5rem;
-    color: var(--color-fg);
+    color: var(--color-bg);
     font-weight: 600;
   }
 
@@ -81,8 +90,8 @@
     margin-right: 1rem;
     border-radius: 8px;
     border: none;
-    background-color: var(--color-bg);
-    color: var(--color-black);
+    background-color: transparent;
+    color: var(--color-bg);
     font-size: 1rem;
     outline: none;
     cursor: pointer;
@@ -90,6 +99,6 @@
   }
 
   .navbar__select:hover {
-    background-color: var(--color-bg);
+    background-color: var(--color-gray);
   }
 }
