--- a/SAE2.03-iteration-max/app/component/Movie/template.html
+++ b/SAE2.03-iteration-max/app/component/Movie/template.html
@@ -1,6 +1,5 @@
 <div class="card" onclick="C.handlerDetail({{id}})">
-  <img src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-max/server/images/{{image}}"
-    alt="Affiche du film" class="card__image" />
+  <img src="../server/images/{{image}}" alt="Affiche du film" class="card__image" />
 
   <div class="card__buttons">
     <button class="card__button card__button--fav {{favoriClass}}"
