--- a/SAE2.03-iteration-surprise/app/component/Hero/template.html
+++ b/SAE2.03-iteration-surprise/app/component/Hero/template.html
@@ -1,7 +1,6 @@
 <div class="hero">
   <div class="hero__top">
-    <img src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-surprise/server/images/{{image}}"
-      alt="Affiche du film" class="hero__image" />
+    <img src="../server/images/{{image}}" alt="Affiche du film" class="hero__image" />
     <div class="hero__content">
       <h2 class="hero__title">{{titre}}</h2>
       <p class="hero__desc">{{desc}}</p>
