--- a/SAE2.03-iteration-surprise/app/component/MovieDetail/template.html
+++ b/SAE2.03-iteration-surprise/app/component/MovieDetail/template.html
@@ -1,8 +1,6 @@
 <div class="card__details">
 
-  <img class="card__details__image"
-    src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-surprise/server/images/{{image}}"
-    alt="Affiche du film" />
+  <img class="card__details__image" src="../server/images/{{image}}" alt="Affiche du film" />
   <div class="card__details__content">
     <h2 class="card__details__title">{{titre}}</h2>
     <div class="card__details__buttons">
