--- a/SAE2.03-iteration-surprise/app/component/NavBar/template.html
+++ b/SAE2.03-iteration-surprise/app/component/NavBar/template.html
@@ -1,9 +1,7 @@
 <nav class="navbar font-sans">
   <ul class="navbar__list">
     <li class="navbar__item">
-      <img class="navbar__logo"
-        src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-surprise/server/images/logo.svg"
-        alt="Logo de l'application">
+      <img class="navbar__logo" src="../server/images/logo.svg" alt="Logo de l'application">
     </li>
     <li class="navbar__item" onclick="{{hAbout}}">Accueil
 
@@ -19,9 +17,7 @@
         {{profile}}
       </select>
 
-      <img id="profile-image" class="navbar__image"
-        src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-surprise/server/images/{{image}}"
-        alt="Photo de profil" />
+      <img id="profile-image" class="navbar__image" src="../server/images/{{image}}" alt="Photo de profil" />
     </div>
   </div>
 
