--- a/SAE2.03-iteration-max/app/component/NavBar/template.html
+++ b/SAE2.03-iteration-max/app/component/NavBar/template.html
@@ -11,9 +11,7 @@
         {{profile}}
       </select>
 
-      <img id="profile-image" class="navbar__image"
-        src="https://mmi.unilim.fr/~pradeau49/SAE2.03-PRADEAU/SAE2.03-iteration-max/server/images/{{image}}"
-        alt="Photo de profil" />
+      <img id="profile-image" class="navbar__image" src="../server/images/{{image}}" alt="Photo de profil" />
     </div>
 
 </nav>
